# fastaiagent-sdk

./: .gitignore  404.html  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml  new_integration.yml
.github/workflows/: auto-label.yml  ci.yml  docs.yml  lint.yml  publish.yml  welcome.yml
agents/: index.html
agents/concepts/: index.html
agents/durability/: index.html
agents/dynamic-instructions/: index.html
agents/memory/: index.html
agents/middleware/: index.html
agents/swarm/: index.html
agents/teams/: index.html
agents/tools/: index.html
api-reference/: index.html
benchmarks/: bench_checkpoint_overhead.py  bench_cycle_performance.py  bench_eval.py  bench_local_kb.py  bench_redaction_overhead.py  bench_replay_load.py  bench_trace_overhead.py
chains/: index.html
chains/checkpointing/: index.html
chains/concepts/: index.html
chains/cyclic-workflows/: index.html
chains/hitl/: index.html
chains/idempotency/: index.html
chains/spec/: index.html
chains/typed-nodes/: index.html
claude_files/: Phase_39_40_SDK.md
cli/: index.html
cli/learn/: index.html
concepts/self-improving-agents/: index.html
deployment/: index.html
deployment/docker/: index.html
deployment/fastapi/: index.html
deployment/modal/: index.html
deployment/replicate/: index.html
deployment/runner/: index.html
docs/: 00-llm-client.md  01-agents.md  02-tools.md  03-chains.md  04-guardrails.md  05-tracing.md  06-replay.md  07-prompts.md  08-knowledge-base.md  09-evaluation.md  10-platform-sync.md  11-integrations.md  index.md  security.md
docs/agents/: concepts.md  durability.md  dynamic-instructions.md  index.md  memory.md  middleware.md  swarm.md  teams.md  tools.md
docs/api-reference/: index.md
docs/chains/: checkpointing.md  concepts.md  cyclic-workflows.md  hitl.md  idempotency.md  index.md  spec.md  typed-nodes.md
docs/cli/: index.md  learn.md
docs/concepts/: self-improving-agents.md
docs/deployment/: docker.md  fastapi.md  index.md  modal.md  replicate.md  runner.md
docs/durability/: api-reference.md  checkpointers.md  concepts.md  concurrency.md  connected-checkpoints.md  index.md  multi-agent.md  patterns.md  quickstart.md  side-effects.md
docs/ui/: index.md  (+14 more)
durability/: index.html
evaluation/: index.html
examples/: 01_simple_agent.py  02_chain_with_cycles.py  03_guardrails.py  04_agent_replay.py  05_prompt_fragments.py  06_rag_agent.py  07_eval_pipeline.py  08_trace_langchain.py  09_otel_export.py  10_platform_sync.py  10_trace_query.py  11_cli_usage.sh  12_streaming.py  13_structured_output.py  14_context_di.py  15_context_di_anthropic.py  15_providers_gemini.py  16_dynamic_instructions.py  16_providers_groq.py  17_dynamic_instructions_advanced.py  17_providers_openrouter.py  18_supervisor_worker.py  19_connect_e2e.py  20_output_type.py  21_retry_backoff.py  22_llm_parameters.py  23_tool_guardrails.py  24_rag_eval.py  25_safety_eval.py  26_similarity_eval.py  27_middleware_tool_budget.py  28_kb_chroma.py  29_kb_qdrant.py  30_memory_blocks.py  31_swarm_research_team.py  32_mcp_expose_agent.py  33_deploy_fastapi.py  34_platform_kb.py  35_local_ui.py  36_chain_workflow.py  (+55 more)
fastaiagent/: __init__.py  client.py  governance.py  runtime.py
fixtures/: agent_simple.json  agent_with_guardrails.json  chain_cyclic.json  chain_full.json  chain_simple.json  chain_typed_state.json  chain_with_hitl.json  chain_with_parallel.json  eval_dataset_multiturn.json  guardrail_code.json  guardrail_llm_judge.json  guardrail_regex.json  prompt_simple.json  prompt_with_fragments.json  tool_function.json  tool_mcp.json  tool_rest.json  trace_agent.json  trace_chain.json
flagships/: index.html
getting-started/: index.html
guardrails/: index.html
integrations/: index.html
knowledge-base/: index.html
learning/: index.html
migration-guides/: index.html
multimodal/: index.html
platform/: index.html
prompts/: index.html
replay/: index.html
scripts/: _demo_redaction_ui.py  _sprint1_ui_server.py  _sprint2_ui_server.py  capture-example-sweep-screenshots.sh  capture-redaction-toggle-screenshots.sh  capture-regression-from-trace-screenshots.sh  capture-replay-fork-dialog-screenshot.sh  capture-security-1110-playwright.sh  capture-sprint1-screenshots.sh  capture-sprint2-screenshots.sh  capture-ui-screenshots.sh  run_all_examples.py  run_readme_blocks.py  seed_ui_kb.py  seed_ui_snapshot.py  seed_ui_sprint1.py  seed_ui_sprint2.py  verify_project_scoping.py
search/: search_index.json
security/: index.html
simulation/: index.html
streaming/: index.html
structured-output/: index.html
testing/: index.html
tests/: conftest.py  seed_simulations.py  test_agent.py  test_agent_messages_param.py  test_agent_multimodal.py  test_agent_multimodal_checkpoint.py  test_canonical_format.py  test_chain.py  test_chain_context.py  test_chain_fork.py  test_chain_multimodal_state.py  test_chain_resume.py  test_chain_routing.py  test_chain_trace_flag.py  test_checkpoint_migration.py  test_checkpointer_protocol.py  test_cli.py  test_cli_resume.py  test_connect_services.py  test_connected_visibility.py  test_context.py  test_context_integration.py  test_datasets_api.py  test_db_migration_v9.py  test_doc_snippet_imports.py  test_dynamic_instructions.py  test_edge_cases.py  test_eval.py  test_eval_agenteval.py  test_eval_curate.py  test_eval_e2e.py  test_eval_geval.py  test_eval_infra_errors.py  test_eval_multimodal.py  test_eval_persist_local.py  test_file_multimodal.py  test_filter_presets.py  test_format_multimodal.py  test_function_tool_schema.py  test_gemini_multimodal.py  (+115 more)
tools/: index.html
tracing/: index.html
tutorials/: index.html
ui/: index.html
ui-frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+755 files in other folders)
