[project]
name = "fastaiagent"
version = "1.5.0"
description = "Build, debug, evaluate, and operate AI agents. The only SDK with fork-and-rerun Agent Replay."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "FastAIFoundry", email = "support@fastaifoundry.com"}]

keywords = [
    "ai-agents", "agent-debugging", "agent-replay",
    "llm-evaluation", "agent-observability", "opentelemetry"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "typer>=0.9",
    "rich>=13.0",
    "Pillow>=10.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=1.0"]
kb = ["fastembed>=0.3", "pymupdf>=1.23", "faiss-cpu>=1.7"]
qdrant = ["qdrant-client>=1.8"]
chroma = ["chromadb>=0.5"]
mcp-server = ["mcp>=1.2"]
otel-export = [
    "opentelemetry-exporter-otlp>=1.20",
]
postgres = ["psycopg[binary,pool]>=3.2"]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.19",
    "bcrypt>=4.0",
    "itsdangerous>=2.1",
    # Required by FastAPI's UploadFile + Form on the new dataset CRUD
    # endpoints (Sprint 3) — image upload + JSONL import are multipart.
    "python-multipart>=0.0.9",
]
all = ["fastaiagent[openai,anthropic,langchain,crewai,kb,qdrant,chroma,mcp-server,otel-export,postgres,ui]"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-section-index>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
fastaiagent = "fastaiagent.cli.main:app"

[project.urls]
Homepage = "https://github.com/fastaifoundry/fastaiagent-sdk"
Documentation = "https://github.com/fastaifoundry/fastaiagent-sdk/tree/main/docs"
Repository = "https://github.com/fastaifoundry/fastaiagent-sdk"
Issues = "https://github.com/fastaifoundry/fastaiagent-sdk/issues"
Changelog = "https://github.com/fastaifoundry/fastaiagent-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["**/.gitkeep"]

[tool.hatch.build.targets.wheel]
packages = ["fastaiagent"]

[tool.hatch.build.targets.wheel.force-include]
"fastaiagent/ui/static" = "fastaiagent/ui/static"

[tool.hatch.build.targets.sdist]
exclude = ["fastaiagent/ui/static", "ui-frontend/node_modules", "ui-frontend/dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end quality gate — requires real API keys and a running platform",
    "qdrant: requires qdrant-client (pip install 'fastaiagent[qdrant]')",
    "chroma: requires chromadb (pip install 'fastaiagent[chroma]')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
