[project]
name = "fastaiagent"
version = "1.40.0"
description = "Build, debug, evaluate, and operate AI agents. The only SDK with fork-and-rerun Agent Replay."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "FastAIFoundry", email = "support@fastaifoundry.com"}]

keywords = [
    "ai-agents", "agent-debugging", "agent-replay",
    "llm-evaluation", "agent-observability", "opentelemetry"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependency pins (M11 / security_review_1.md):
# Every dep gets an upper bound so a future major version can't silently
# break installations. Bounds are deliberately conservative: bumped only
# after we've smoke-tested the new major against this SDK.
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.25,<1",
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "typer>=0.9,<1",
    "rich>=13.0,<15",
    "Pillow>=10.0,<13",
    "pymupdf>=1.24,<2",
]

[project.optional-dependencies]
openai = ["openai>=1.0,<3"]
anthropic = ["anthropic>=0.20,<1"]
langchain = ["langchain-core>=0.3,<1", "langgraph>=0.2,<1"]
crewai = ["crewai>=1.0,<2"]
# pydantic-ai >=1.105 is required: earlier 1.x imports anthropic's pre-rename
# `UserLocation`, which current `anthropic` ships as `BetaUserLocationParam`
# (ImportError otherwise). 1.105+ uses the new name. The full `[all]` resolution
# is too deep for pip's backtracker, so the e2e/optional-deps CI jobs install
# with `uv` (which resolves it, picking a crewai that co-exists with this).
pydanticai = ["pydantic-ai>=1.105,<2"]
kb = ["fastembed>=0.3,<1", "pymupdf>=1.23,<2", "faiss-cpu>=1.7,<2"]
qdrant = ["qdrant-client>=1.8,<2"]
chroma = ["chromadb>=0.5,<2"]
mcp-server = ["mcp>=1.2,<2"]
otel-export = [
    "opentelemetry-exporter-otlp>=1.20,<2",
]
postgres = ["psycopg[binary,pool]>=3.2,<4"]
redis = ["redis>=5.0,<9"]
# Heavier PII backend for the safety library. The default detectors
# (regex + Luhn PII, heuristic prompt-injection) are zero-dependency; this
# extra only adds the optional Presidio NER backend. After installing it,
# download a spaCy model separately: `python -m spacy download en_core_web_lg`.
safety = [
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
]
ui = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "aiosqlite>=0.19,<1",
    "bcrypt>=4.0,<5",
    "itsdangerous>=2.1,<3",
    # Required by FastAPI's UploadFile + Form on the new dataset CRUD
    # endpoints (Sprint 3) — image upload + JSONL import are multipart.
    "python-multipart>=0.0.9,<1",
]
all = ["fastaiagent[openai,anthropic,langchain,crewai,pydanticai,kb,qdrant,chroma,mcp-server,otel-export,postgres,redis,safety,ui]"]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.24,<1",
    "mkdocs-section-index>=0.3,<1",
]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5.0,<8",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
    # Universal-harness test deps. The SDK itself has no runtime
    # dependency on these — users bring their own LangChain provider
    # adapters — but the e2e harness suite needs them. Including
    # ``langchain-openai`` / ``langchain-anthropic`` in ``dev`` keeps
    # ``pip install -e .[all,dev]`` (the CI install line) sufficient
    # to run the harness suite without per-test importorskips.
    "langchain-openai>=0.2,<1",
    "langchain-anthropic>=0.2,<1",
    # Test-only: drives the live ``tests/e2e/test_openinference_capture_e2e.py``
    # drift check for ``enable_otel_capture()`` against a real OpenInference
    # instrumentor. Not a runtime dependency of the SDK.
    "openinference-instrumentation-openai>=0.1,<1",
]

[project.scripts]
fastaiagent = "fastaiagent.cli.main:app"

[project.entry-points.pytest11]
fastaiagent = "fastaiagent.eval.pytest_plugin"

[project.urls]
Homepage = "https://github.com/fastaifoundry/fastaiagent-sdk"
Documentation = "https://github.com/fastaifoundry/fastaiagent-sdk/tree/main/docs"
Repository = "https://github.com/fastaifoundry/fastaiagent-sdk"
Issues = "https://github.com/fastaifoundry/fastaiagent-sdk/issues"
Changelog = "https://github.com/fastaifoundry/fastaiagent-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["**/.gitkeep"]

[tool.hatch.build.targets.wheel]
packages = ["fastaiagent"]

[tool.hatch.build.targets.wheel.force-include]
"fastaiagent/ui/static" = "fastaiagent/ui/static"

[tool.hatch.build.targets.sdist]
exclude = ["fastaiagent/ui/static", "ui-frontend/node_modules", "ui-frontend/dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end quality gate — requires real API keys and a running platform",
    "qdrant: requires qdrant-client (pip install 'fastaiagent[qdrant]')",
    "chroma: requires chromadb (pip install 'fastaiagent[chroma]')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
